2011-02-08  Colin Watson  <cjwatson@ubuntu.com>

	* include/grub/file.h (not_easly_seekable): Rename to ...
	(not_easily_seekable): ... this.  Update all users.

2011-01-28  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Making a GRUB bootable CD-ROM): Update to describe
	grub-mkrescue.

2011-01-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c (generate_image): Refuse to create the images
	bigger than the actual flash (512K) in Loongson machines. 512K is also
	the biggest chip supported by them.

2011-01-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/getroot.c: Include config-util.h explicitly.

2011-01-22  Anthony DeRobertis <anthony@derobert.net>

	* grub-core/disk/mdraid1x_linux.c (grub_mdraid_detect): Check
	super_offset field.

2011-01-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Ignore install device on platforms
	where it doesn't make sense. Always use UUIDs except on pc, efi and
	sparc64.
	Reported by: Daniel Kahn Gillmor.

2011-01-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/bus/bonito.c (write_bases): Fix direction of the shift.

2011-01-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/bsdlabel.c: Include grub/emu/misc.h and not grub/util/misc.h.
	(iterate_real): Don't rely on partition being non-NULL.

2011-01-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/script/argv.c (round_up_exp): unsigned is 32-bit on all
	supported platforms. Put a compile time assert for this rather than
	generate a warning with 32-bit shift.

2011-01-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/scsi.c (grub_scsi_read): Fix binary and check and make
	logical expression more readable.

2011-01-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/raid.c (insert_array): Ensure uniqueness of p->number
	even if some elements have a name.
	Reported by: Alexander GQ Gerasiov.

2011-01-22  Colin Watson  <cjwatson@ubuntu.com>
